H5使用video结合canvas来录制视频和上传

--- a/video2/public/index2.html
+++ b/video2/public/index2.html
@@ -1,5 +1,11 @@
 <html>
 <head>
+  <!--
+效果：
+1.打开摄像头，并获得 视频流。
+2.录制 视频流 并生成 字节blob 包。
+3. 上传 字节数据包到 后端
+ -->
   <title></title>
   <meta charset="utf-8">
   <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
