完成demo：JS 播放视频流时调整 色度， 饱和度，亮度，对比度2

--- a/video2/public/index_changge_hsl.html
+++ b/video2/public/index_changge_hsl.html
@@ -5,6 +5,10 @@
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <meta charset="UTF-8"/>
 
+<!--
+  JS 播放视频流时调整 色度， 饱和度，亮度，对比度
+-->
+
     <style>
       body {
         background: black;
